--- a/templates/uploaded_file.html
+++ b/templates/uploaded_file.html
@@ -7,6 +7,6 @@
 <body>
     <h1>nutriscore</h1>
     <h2>{{text}}</h2>
-    <img src="{{path}}" alt="画像", width ="30%">
+    <img src="{{url_for('static', filename=path)}}" alt="画像", width ="30%">
 </body>
 </html>
