--- a/templates/upload.html
+++ b/templates/upload.html
@@ -6,10 +6,13 @@
 </head>
 <body>
     <h1>アップロード</h1>
-    <form action="{{url_for('upload')}}" method="POST" enctype="multipart/form-data">
+    <form action="{{next_url_upload}}" method="POST" enctype="multipart/form-data">
         <input type="file" name="example">
         <input type="submit" value="アップロード">
     </form>
 
+    <form action="{{next_url_view}}" method="GET">
+        <input type="submit" value="view">
+    </form>
 </body>
 </html>
