--- a/templates/login_bts.html
+++ b/templates/login_bts.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Register</title>
+  <title>Sign In Page</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-0svjQEgBF1iqvnbIl+N74uLENDLJipj:**" crossorigin="anonymous">
 </head>
 <body>
   <div class="container mt-5">
     <div class="card mx-auto" style="width: 300px;">
       <div class="card-header">
-        <h5 class="card-title">Register</h5>
+        <h5 class="card-title">Please sign in</h5>
       </div>
       <div class="card-body">
-        <form action="/register" method="POST" enctype="multipart/form-data">
+        <form action="/upload" method="POST" enctype="multipart/form-data">
           <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email address</label>
             <input type="text" class="form-control" id="email_address" name="email_address" aria-describedby="emailHelp">
@@ -26,11 +26,10 @@
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Remember me</label>
           </div>
-          <button type="submit" class="btn btn-primary mt-3">Register</button>
+          <button type="submit" class="btn btn-primary mt-3">Sign in</button>
         </form>
       </div>
     </div>
   </div>
 </body>
 </html>
-
