--- a/templates/uploaded_file.html
+++ b/templates/uploaded_file.html
@@ -3,30 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <title>nutriscore</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <h1>nutriscore</h1>
-    <h2>{{text}}</h2>
-    <img src="{{url_for('static', filename=path)}}" alt="画像", width ="30%">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Nutrient Score</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="{{next_url_upload}}">Upload</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="{{next_url_view_today}}">Today</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="{{next_url_view_calories}}">Calories</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="{{next_url_view_fat}}">Fat</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="{{next_url_view_carbohydrates}}">Carbohydrates</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="{{next_url_view_protein}}">Protein</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/register">Register</a>
+            </li>
+          </ul>
+        </div>
+    </nav>
 
-    <form action="{{next_url_upload}}" method="GET">
-        <input type="submit" value="upload">
-    </form>
-    <form action="{{next_url_view_today}}" method="GET">
-        <input type="submit" value="today result">
-    </form>
-    <form action="{{next_url_view_calories}}" method="GET">
-        <input type="submit" value="calories">
-    </form>
-    <form action="{{next_url_view_fat}}" method="GET">
-        <input type="submit" value="fat">
-    </form>
-    <form action="{{next_url_view_protein}}" method="GET">
-        <input type="submit" value="protein">
-    </form>
-    <form action="{{next_url_view_carbohydrates}}" method="GET">
-        <input type="submit" value="carbohydrates">
-    </form>
 
+
+
+    <div style="text-align: center;">
+        <img src="{{url_for('static', filename=path)}}" alt="画像" class="rounded mx-auto d-block" width ="30%">
+        <h4>{{text}}</h4>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
